# llm-brain

./: .env.example  .gitignore  .replit  ARCHITECTURE_OVERVIEW.md  HEALTHCHECK.md  README (copy).md  README.md  ROADMAP.md  ROADMAP_BACKLOG.md  UI_FEATURE_GAPS.md  agent_loop.py  auto_push.sh  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  server.py
agent/: __init__.py  analyzers.py  change_detector.py  chat_controller.py  chat_tools.py  codex_cli_runner.py  codex_remote.py  config.py  llm_client.py  review_service.py  storage.py  telegram_bot.py
attached_assets/: Pasted--A-strategy-factory-experiment-lab-AI-researcher-that-k_1765224865629.txt  Pasted--AI-BUILDER-PROMPT-Synthetic-Universe-Calibration-Harve_1765399112041.txt  Pasted--Options-Trading-Agent-Backlog-Roadmap-Last-updated-202_1765151744116.txt  Pasted-1-3-Run-a-tiny-backtest-and-see-if-it-lands-in-MySQL-Fr_1765147844090.txt  Pasted-1-Add-OpenAPI-friendly-examples-to-the-models-Here-s-an_1765040045794.txt  Pasted-1-Add-a-MarketContext-section-to-your-state-1-1-New-dat_1764892909793.txt  Pasted-1-Add-imports-month-map-parser-helper-At-the-top-of-src_1764960148321.txt  Pasted-1-Backtesting-should-every-parameter-have-a-checkbox-Sh_1765039961694.txt  Pasted-1-Candidate-level-dataset-what-we-want-Right-now-your-t_1764975422274.txt  Pasted-1-Clean-architecture-build-plan-Overall-goal-A-modular-_1764872958910.txt  Pasted-1-Concept-production-vs-research-mode-We-ll-add-mode-pr_1764890275021.txt  Pasted-1-DeribitDataSource-using-Deribit-s-TradingView-style-d_1764892098862.txt  (+141 more)
(+2665 files in other folders)
